array.island.Island.scala.error
Erreur de compilation :
Island:3: error: '(' expected but identifier found.
  for i<-1 to (count(num)-1) {if ((apply (i-1))<(apply(i))) {x=x+1}}; return(x) 
      ^Island:3: error: illegal start of simple expression
  for i<-1 to (count(num)-1) {if ((apply (i-1))<(apply(i))) {x=x+1}}; return(x) 
                                                                    ^